Shift css for image annos into CSS rather than hardcode Fix jquery refs in filter plugin

--- a/annotations.css
+++ b/annotations.css
@@ -4,3 +4,13 @@
 .icon-reply {background-image:url("reply.png") !important ; background-position:0px 0px !important;}
 .reply-count:before {content: "▿ "}
 .collapsed:before {content:"▹ "}
+.annotator-filter {
+    top:auto;
+    bottom:0;
+}
+.annotator-hl.annotator-image {
+    border: 2px solid red;
+}
+.annotator-hl.annotator-image.annotator-hl-filtered {
+    border: none;
+}
